Connect user profile settings
